Fix ministat wrapping

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4124,7 +4124,7 @@ td.title a {
   text-decoration: none;
   padding: 6px 0 6px 10px;
   vertical-align: middle;
-  display: inline-block;
+  display: block;
   height: 100%;
 }
 td.add a {
