--- a/public/less/style.less
+++ b/public/less/style.less
@@ -61,7 +61,7 @@ td.title {
 		text-decoration: none;
 		padding: 6px 0 6px 10px;
 		vertical-align: middle;
-		display: inline-block;
+		display: block;
 		height: 100%;
 	}
 }
